# pepl_sales

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
pepl_sales/: diagnostics.py  events.py  hooks.py  install.py  modules.txt  patches.txt
pepl_sales/overrides/: payment_entry.py  sales_invoice.py
pepl_sales/patches/v1_0/: add_cycle1_custom_fields.py
pepl_sales/pepl_sales/api/: payment_tracker_jobs.py
pepl_sales/pepl_sales/doctype/pepl_company_document/: pepl_company_document.js  pepl_company_document.json  pepl_company_document.py
pepl_sales/pepl_sales/doctype/pepl_company_document_version/: pepl_company_document_version.json  pepl_company_document_version.py
pepl_sales/pepl_sales/doctype/pepl_cst_competitor_history/: pepl_cst_competitor_history.json  pepl_cst_competitor_history.py
pepl_sales/pepl_sales/doctype/pepl_cst_component/: pepl_cst_component.json  pepl_cst_component.py
pepl_sales/pepl_sales/doctype/pepl_cst_cost_sheet/: pepl_cst_cost_sheet.js  pepl_cst_cost_sheet.json  pepl_cst_cost_sheet.py
pepl_sales/pepl_sales/doctype/pepl_document_attachment/: pepl_document_attachment.js  pepl_document_attachment.json  pepl_document_attachment.py
pepl_sales/pepl_sales/doctype/pepl_document_entry/: pepl_document_entry.js  pepl_document_entry.json  pepl_document_entry.py
pepl_sales/pepl_sales/doctype/pepl_document_tracker/: pepl_document_tracker.js  pepl_document_tracker.json  pepl_document_tracker.py
pepl_sales/pepl_sales/doctype/pepl_payment_receipt/: pepl_payment_receipt.js  pepl_payment_receipt.json  pepl_payment_receipt.py
pepl_sales/pepl_sales/doctype/pepl_payment_tracker/: pepl_payment_tracker.js  pepl_payment_tracker.json  pepl_payment_tracker.py
pepl_sales/pepl_sales/doctype/pepl_product_assembly_component/: pepl_product_assembly_component.json  pepl_product_assembly_component.py
pepl_sales/pepl_sales/doctype/pepl_product_drawing_revision/: pepl_product_drawing_revision.json  pepl_product_drawing_revision.py
pepl_sales/pepl_sales/doctype/pepl_product_master/: pepl_product_master.js  pepl_product_master.json  pepl_product_master.py
pepl_sales/pepl_sales/doctype/pepl_product_specification/: pepl_product_specification.json  pepl_product_specification.py
pepl_sales/pepl_sales/doctype/pepl_psd_entry/: pepl_psd_entry.js  pepl_psd_entry.json  pepl_psd_entry.py
(+49 files in other folders)
