[project]
name = "pepl_sales"
authors = [
    { name = "Anshiv", email = "erp.pepl@gmail.com" }
]
description = "Sales to Cash"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# Frappe Framework versions supported by this app.
# This declaration is required by Frappe Cloud.
[tool.bench.frappe-dependencies]
frappe = ">=15.0.0,<16.0.0"

# These dependencies are only installed when developer mode is enabled.
[tool.bench.dev-dependencies]

# These apt dependencies will be installed from Ubuntu repositories
# when the app is hosted on Frappe Cloud.
[deploy.dependencies.apt]
packages = []

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "UP",
    "B",
    "RUF",
]
ignore = [
    "B017",
    "B018",
    "B023",
    "B904",
    "E101",
    "E402",
    "E501",
    "E741",
    "F401",
    "F403",
    "F405",
    "F722",
    "W191",
]
typing-modules = ["frappe.types.DF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true