[project]
name = "pepl_sales"
authors = [
    { name = "Anshiv", email = "erp.pepl@gmail.com" }
]
description = "Sales to Cash"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# Frappe applications and versions supported by this branch.
[tool.bench.frappe-dependencies]
frappe = ">=16.0.0-dev,<17.0.0"
erpnext = ">=16.0.0-dev,<17.0.0"

# Dependencies installed only in developer mode.
[tool.bench.dev-dependencies]

# Ubuntu packages required on Frappe Cloud.
[deploy.dependencies.apt]
packages = []

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "UP",
    "B",
    "RUF",
]
ignore = [
    "B017",
    "B018",
    "B023",
    "B904",
    "E101",
    "E402",
    "E501",
    "E741",
    "F401",
    "F403",
    "F405",
    "F722",
    "W191",
]
typing-modules = ["frappe.types.DF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true